--- a/third/CMakeLists.txt
+++ b/third/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_subdirectory(glfw)
-add_subdirectory(glad)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/glfw)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/glad)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/stb)
