--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,5 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src)
 add_executable(rubicks_cube main.cpp)
 
 target_link_libraries(rubicks_cube rubicks_cube_src)
+
+file(COPY ${CMAKE_CURRENT_LIST_DIR}/resources DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
