--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB_RECURSE SRC ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
 
-add_library(rubicks_cube_src STATIC ${SRC})
-target_link_libraries(rubicks_cube_src PUBLIC glad glfw stb_image)
+add_library(render_sandbox STATIC ${SRC})
+target_link_libraries(render_sandbox PUBLIC glad glfw stb_image)
 
-target_include_directories(rubicks_cube_src PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(render_sandbox PUBLIC ${CMAKE_CURRENT_LIST_DIR})
