--- a/third/stb/CMakeLists.txt
+++ b/third/stb/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(stb_image INTERFACE)
-add_dependencies(stb_image ${CMAKE_CURRENT_LIST_DIR}/stb_image.h)
+add_dependencies(stb_image
+        ${CMAKE_CURRENT_LIST_DIR}/stb_image.h
+        ${CMAKE_CURRENT_LIST_DIR}/stb_image_write.h)
 target_include_directories(stb_image INTERFACE ${CMAKE_CURRENT_LIST_DIR})
