--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/rubiks_cube)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/raytracer)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/quaternions)
