--- a/samples/quaternions/CMakeLists.txt
+++ b/samples/quaternions/CMakeLists.txt
@@ -5,3 +5,5 @@ add_executable(quat ${SRC})
 target_include_directories(quat PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
 target_link_libraries(quat render_sandbox)
+
+file(COPY ${CMAKE_CURRENT_LIST_DIR}/resources DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
